--- a/pom.xml
+++ b/pom.xml
@@ -209,6 +209,8 @@
         <jai-imageio-core.version>1.4.0</jai-imageio-core.version>
         <JavaAPIforKml.version>2.2.1_CODICE_1</JavaAPIforKml.version>
         <jackson.version>2.11.0</jackson.version>
+        <jakarta.activation.version>1.2.1</jakarta.activation.version>
+        <jakarta.activation.bundle.version>${jakarta.activation.version}_2</jakarta.activation.bundle.version>
         <jasypt.version>1.9.3</jasypt.version>
         <javax.annotation-api.version>1.3.5</javax.annotation-api.version>
         <javax.cache.version>1.1.1</javax.cache.version>
