DDF-6421 - Enable configuration of solr highlight parameters

--- a/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
@@ -95,6 +95,8 @@ solr.commit.nrt.metacardTypes=workspace,metacard.query,metacard.list,query-templ
 # Comma-separated list of metacard fields that should never show up as search result highlights
 solr.highlight.blacklist=metacard-tags
 solr.highlight.enabled=false
+# solr.highlight.anytext.expand=false
+# solr.highlight.config.file=etc/solr-highlighter.properties
 
 # Whether or not case-insensitive sorting is enabled
 solr.query.sort.caseInsensitive=true
