--- a/distribution/ddf/pom.xml
+++ b/distribution/ddf/pom.xml
@@ -73,6 +73,7 @@
                             <resolveDefinedRepositoriesRecursively>false</resolveDefinedRepositoriesRecursively>
                             <descriptors>
                                 <descriptor>mvn:ddf.catalog/catalog-app/${project.version}/xml/features</descriptor>
+                                <descriptor>mvn:ddf.catalog.solr/catalog-solr-app/${project.version}/xml/features</descriptor>
                                 <descriptor>mvn:ddf.features/admin/${project.version}/xml/features</descriptor>
                                 <descriptor>mvn:ddf.features/apps/${project.version}/xml/features</descriptor>
                                 <descriptor>mvn:ddf.features/branding/${project.version}/xml/features</descriptor>
@@ -83,7 +84,9 @@
                                 <descriptor>mvn:ddf.features/security/${project.version}/xml/features</descriptor>
                                 <descriptor>mvn:ddf.features/solr/${project.version}/xml/features</descriptor>
                                 <descriptor>mvn:ddf.features/utilities/${project.version}/xml/features</descriptor>
+                                <descriptor>mvn:ddf.ui/search-ui-app/${project.version}/xml/features</descriptor>
                                 <descriptor>mvn:org.codice.ddf/ui/${ddf-admin-ui.version}/xml/features</descriptor>
+                                <descriptor>mvn:org.codice.ddf.spatial/spatial-app/${project.version}/xml/features</descriptor>
                             </descriptors>
                             <repository>${setup.folder}/${karaf.folder}/system</repository>
                         </configuration>
@@ -264,9 +267,18 @@
             <artifactId>docs</artifactId>
             <version>${project.version}</version>
         </dependency>
+        
+        <!-- Features to add to system repository -->
         <dependency>
             <groupId>ddf.catalog</groupId>
             <artifactId>catalog-app</artifactId>
+            <version>${project.version}</version>
+            <type>xml</type>
+            <classifier>features</classifier>
+        </dependency>
+        <dependency>
+            <groupId>ddf.catalog.solr</groupId>
+            <artifactId>catalog-solr-app</artifactId>
             <version>${project.version}</version>
             <type>xml</type>
             <classifier>features</classifier>
@@ -342,9 +354,23 @@
             <type>xml</type>
         </dependency>
         <dependency>
+            <groupId>ddf.ui</groupId>
+            <artifactId>search-ui-app</artifactId>
+            <version>${project.version}</version>
+            <classifier>features</classifier>
+            <type>xml</type>
+        </dependency>
+        <dependency>
             <groupId>org.codice.ddf</groupId>
             <artifactId>ui</artifactId>
             <version>${ddf-admin-ui.version}</version>
+            <classifier>features</classifier>
+            <type>xml</type>
+        </dependency>
+        <dependency>
+            <groupId>org.codice.ddf.spatial</groupId>
+            <artifactId>spatial-app</artifactId>
+            <version>${project.version}</version>
             <classifier>features</classifier>
             <type>xml</type>
         </dependency>
