--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -34,7 +34,8 @@
         <module>kernel</module>
         <module>docs</module>
         <module>ddf</module>
-        <module>docker</module>
+        <!-- Temporarily disabling docker modules 
+        <module>docker</module> -->
         <!--Test needs to be the last module because it depends on artifacts from earlier modules-->
         <module>test</module>
     </modules>
