--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -98,9 +98,10 @@ platform/util/			                @stustison
 ###############################
 
 ui/ @andrewkfiedler
-ui/packages/catalog-ui-search/src/main/webapp/react-component/container/sharing/    @andrewkfiedler @rymach
-ui/packages/catalog-ui-search/src/main/webapp/react-component/presentation/sharing/    @andrewkfiedler @rymach
-ui/packages/catalog-ui-search/src/main/webapp/react-component/utils/security/    @andrewkfiedler @rymach
+ui/packages/catalog-ui-search/src/main/webapp/ @andrewkfiedler @maryformanek
+ui/packages/catalog-ui-search/src/main/webapp/react-component/container/sharing/    @andrewkfiedler @rymach @maryformanek
+ui/packages/catalog-ui-search/src/main/webapp/react-component/presentation/sharing/    @andrewkfiedler @rymach @maryformanek
+ui/packages/catalog-ui-search/src/main/webapp/react-component/utils/security/    @andrewkfiedler @rymach @maryformanek
 
 ###############################
 # CODICE WHITELIST ENTRIES -- leave at bottom of file
