--- a/catalog/spatial/kml/pom.xml
+++ b/catalog/spatial/kml/pom.xml
@@ -30,6 +30,19 @@
     </modules>
     <dependencyManagement>
         <dependencies>
+            <!-- https://mvnrepository.com/artifact/org.jvnet.ogc/kml-v_2_2_0 -->
+            <dependency>
+                <groupId>org.jvnet.ogc</groupId>
+                <artifactId>kml-v_2_2_0</artifactId>
+                <version>2.6.1</version>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/org.jvnet.ogc/kml-v_2_2_0-schema -->
+            <dependency>
+                <groupId>org.jvnet.ogc</groupId>
+                <artifactId>kml-v_2_2_0-schema</artifactId>
+                <version>1.1.0</version>
+            </dependency>
+
             <dependency>
                 <groupId>de.micromata.jak</groupId>
                 <artifactId>JavaAPIforKml</artifactId>
