--- a/catalog/spatial/kml/spatial-kml-util/pom.xml
+++ b/catalog/spatial/kml/spatial-kml-util/pom.xml
@@ -27,6 +27,22 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.jvnet.ogc</groupId>
+	        <artifactId>kml-v_2_2_0</artifactId>
+	        <version>2.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jvnet.jaxb2_commons</groupId>
+	        <artifactId>jaxb2-basics-runtime</artifactId>
+	        <version>0.11.0</version>
+        </dependency>
+            <!-- https://mvnrepository.com/artifact/org.jvnet.ogc/kml-v_2_2_0-schema -->
+            <dependency>
+                <groupId>org.jvnet.ogc</groupId>
+                <artifactId>kml-v_2_2_0-schema</artifactId>
+                <version>1.1.0</version>
+            </dependency>
+        <dependency>
             <groupId>de.micromata.jak</groupId>
             <artifactId>JavaAPIforKml</artifactId>
             <version>${JavaAPIforKml.version}</version>
