--- a/features/security/pom.xml
+++ b/features/security/pom.xml
@@ -420,12 +420,12 @@
         <dependency>
             <groupId>net.minidev</groupId>
             <artifactId>json-smart</artifactId>
-            <version>2.3</version>
+            <version>${json-smart.version}</version>
         </dependency>
         <dependency>
             <groupId>net.minidev</groupId>
             <artifactId>accessors-smart</artifactId>
-            <version>1.2</version>
+            <version>${json-smart.version}</version>
         </dependency>
         <dependency>
             <groupId>org.ow2.asm</groupId>
