--- a/platform/persistence/platform-persistence-commands/pom.xml
+++ b/platform/persistence/platform-persistence-commands/pom.xml
@@ -38,6 +38,10 @@
             <groupId>org.osgi</groupId>
             <artifactId>org.osgi.core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
       <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
