--- a/distribution/solr-distro/pom.xml
+++ b/distribution/solr-distro/pom.xml
@@ -77,6 +77,11 @@
             <artifactId>jackson-annotations</artifactId>
             <version>${jackson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
@@ -103,7 +108,7 @@
                             </url>
                             <unpack>true</unpack>
                             <failOnError>true</failOnError>
-                            <sha512>fa68e00b69240dc89542c12627efba90faa05600622a3cf33691041fdf3721930df1dff7c1c2ef0737bbeb99198b1ced038ca2be8686e2c194359413da114d20</sha512>
+                            <sha512>085f6fce67326ffdcca965854e25f720849bc3e0dc7e4fac5fa0b550d42af188b10e2b799039a50d00fcc84c364d294572ceb5ecdfa21eb28df331ab881a3689</sha512>
                             <checkSignature>true</checkSignature>
                         </configuration>
                     </execution>
