--- a/catalog/spatial/csw/pom.xml
+++ b/catalog/spatial/csw/pom.xml
@@ -29,6 +29,7 @@
         <module>spatial-csw-transformer</module>
         <module>spatial-csw-source</module>
         <module>spatial-csw-connectedsource</module>
+        <module>spatial-csw-endpoint-api</module>
         <module>spatial-csw-endpoint</module>
         <module>spatial-csw-source-common</module>
     </modules>
