--- a/catalog/spatial/csw/spatial-csw-endpoint/pom.xml
+++ b/catalog/spatial/csw/spatial-csw-endpoint/pom.xml
@@ -24,6 +24,11 @@
     <name>DDF :: Spatial :: CSW :: Endpoint</name>
     <dependencies>
         <dependency>
+            <groupId>org.codice.ddf.spatial</groupId>
+            <artifactId>spatial-csw-endpoint-api</artifactId>
+            <version>2.28.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>ddf.security.handler</groupId>
             <artifactId>security-handler-impl</artifactId>
             <version>${project.version}</version>
