--- a/catalog/transformer/catalog-transformer-xlsx/pom.xml
+++ b/catalog/transformer/catalog-transformer-xlsx/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>catalog-transformer-csv-common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>${commons-csv.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -80,6 +85,7 @@
                     <instructions>
                         <Embed-Dependency>
                             catalog-core-api-impl,
+                            commons-csv,
                             catalog-transformer-csv-common
                         </Embed-Dependency>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
